Imperial authority + Devastation + Autonomy

--- a/3362815204/localisation/GLP_gui_l_english.yml
+++ b/3362815204/localisation/GLP_gui_l_english.yml
@@ -18,7 +18,7 @@ glp_change_government_loc: "§PAdd minorities§!" #Broken, need verification, To
 #Country modifiers
 glp_give_mana_loc: "§GAdd Mana§! £dip£ £adm£ £mil£" #Done maybe regroup and add more options
 glp_donate_ducats_loc: "§GAdd Treasury§!" #Done maybe add more options
-glp_ai_fixes_loc: "§RBig Red Admin Button§!" #Done need to add devastation and autonomy
+glp_ai_fixes_loc: "§RBig Red Admin Button§!" #Done
 glp_general_rewards_loc: "§GMiscellaneous Boost§!" #Done
 glp_award_artifact_loc: "§GAward/Steal Artifact§!" #To be renamed as Attribute flag
 glp_rewards_modifier_loc: "§GRewards Ideas groups§!" #To be renamed as Rewards Ideas groups
