--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -267,12 +267,19 @@
  glp_save_edit_events.EVTBUFFA20:0 "100 Legitimacy or Other"
  glp_save_edit_events.EVTBUFFA21:0 "-15 Legitimacy or Other"
  glp_save_edit_events.EVTBUFFA22:0 "-100 Legitimacy or Other"
- glp_save_edit_events.EVTBUFFA23:0 "10 Authority"
- glp_save_edit_events.EVTBUFFA24:0 "100 Authority"
- glp_save_edit_events.EVTBUFFA25:0 "-100 Authority"
+ glp_save_edit_events.EVTBUFFA23:0 "10 Inca Authority"
+ glp_save_edit_events.EVTBUFFA24:0 "100 Inca Authority"
+ glp_save_edit_events.EVTBUFFA25:0 "-100 Inca Authority"
  glp_save_edit_events.EVTBUFFA26:0 "100 Splendor"
  glp_save_edit_events.EVTBUFFA27:0 "800 Splendor"
  glp_save_edit_events.EVTBUFFA28:0 "-100 Splendor"
+ glp_save_edit_events.EVTBUFFA29:0 "1 Imperial Authority"
+ glp_save_edit_events.EVTBUFFA30:0 "10 Imperial Authority"
+ glp_save_edit_events.EVTBUFFA31:0 "100 Imperial Authority"
+ glp_save_edit_events.EVTBUFFA32:0 "-1 Imperial Authority"
+ glp_save_edit_events.EVTBUFFA33:0 "-10 Imperial Authority"
+ glp_save_edit_events.EVTBUFFA34:0 "-100 Imperial Authority"
+ glp_save_edit_events.EVTBUFFA35:0 "10 Devastation"
  
  glp_save_edit_events.EVTNAME17:0 "Spawn Generals for [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC17:0 "Decide what kind of generals to spawn for [From.Owner.GetName]."
@@ -341,10 +348,17 @@
  glp_save_edit_events.EVTFIXINGA11:0 "Add 100 AE opinion with players"
  glp_save_edit_events.EVTFIXINGA12:0 "Remove AE opinion with AI"
  glp_save_edit_events.EVTFIXINGA13:0 "Add 100 AE opinion with AI" 
+ glp_save_edit_events.EVTFIXINGA14:0 "Add 10 devastation to [From.GetName]"
+ glp_save_edit_events.EVTFIXINGA15:0 "Add 100 devastation to [From.GetName]"
+ glp_save_edit_events.EVTFIXINGA16:0 "Add -10 devastation to [From.GetName]"
+ glp_save_edit_events.EVTFIXINGA17:0 "Add -100 devastation to [From.GetName]"
+ glp_save_edit_events.EVTFIXINGA18:0 "Add 10 Autonomy in [From.GetName]"
+ glp_save_edit_events.EVTFIXINGA19:0 "Add 25 Autonomy in [From.GetName]"
+ glp_save_edit_events.EVTFIXINGA20:0 "Add 100 Autonomy in [From.GetName]"
+ glp_save_edit_events.EVTFIXINGA21:0 "Remove 10 Autonomy in [From.GetName]"
+ glp_save_edit_events.EVTFIXINGA22:0 "Remove 25 Autonomy in [From.GetName]"
+ glp_save_edit_events.EVTFIXINGA23:0 "Remove 100 Autonomy in [From.GetName]"
 
-
- #glp_save_edit_events.EVTFIXINGNUKEWARNING:0 "Send them a death threat"
- #MJ_nuke_threat_tt:0 "§RWith this, they will think twice before doing something stupid§!"
  glp_save_edit_events.EVTFIXINGNUKE:0 "Nuke this f*cking province"
  MJ_nuke_tt:0 "§RYou choose violence to punish foolish behavior. This action will raze to the ground this province.§!"
  glp_save_edit_events_NUKE.EVTNAME1:0 "The last reflection"
